# WMT

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  WMT  WMV  libwmt.pc.in  main.c  wmt.c  wmt.h
doc/: ErrorCodes.txt
include/: wmt.hpp
lib/: wmt.c  wmt.cpp  wmt.h  wmt.hpp
pkg/DEBIAN/: control
src/: main.c  main.cpp  wmt.cpp
